Bug #45287: phase 2 : 5.0 64 bit compilation warnings

Fixed various compilation warnings when compiling on a 
 64 bit windows.